--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -8,14 +8,15 @@ p {
     font-size: 16px;
 }
 label, h4, legend, h1, h2 {
-    color: #ff6a5c;
+    color: #5d4b3f;
 }
-a:hover {
+/*a:hover {
     background-color: white;
 }
 a.logoA :hover {
 
-}
+}*/
+
 
 
 
@@ -28,7 +29,7 @@ body#mainBody {
 div#navBar {
     width: 1080px;
     height: 170px;
-    background-color: #4d4d4d;
+    background-color: #1a5f5e;
     display: inline-block;
 }
     div.logo img {
@@ -44,7 +45,7 @@ div#navBar {
     div.categories {
         width: 1080px;
         height: 40px;
-        background-color: #2d2c2f;
+        background-color: #b2d0c7;
         margin-top: -72px;
         padding-top: 8px;
     }
@@ -178,83 +179,162 @@ div.myCustomModal {
         md-input-container.imagelinkCon
 
 
+/*////////Show More button/////////*/
+        div.expandMores {
+            width: 920px;
+            height: 200px;
+            color: red;
+            margin-top: 50px;
+            display: inline-block;
+        }
+
+              .slideDown.ng-hide {
+                height:0;
+                transition:height 0.35s ease;
+                overflow:hidden;
+                position:relative;
+              }
+
+              .slideDown {
+                height:141px;
+                transition:height 0.35s ease;
+                overflow:hidden;
+                position:relative;
+              }
+
+              .slideDown.ng-hide-remove,
+              .slideDown.ng-hide-add {
+                /* remember, the .hg-hide class is added to element
+                when the active class is added causing it to appear
+                as hidden. Therefore set the styling to display=block
+                so that the hide animation is visible */
+                display:block!important;
+              }
+
+
+              .slideDown.ng-hide-add {
+                animation-name: hide;
+                -webkit-animation-name: hide;
+
+                animation-duration: .5s;
+                -webkit-animation-duration: .5s;
+
+                animation-timing-function: ease-in;
+                -webkit-animation-timing-function: ease-in;
+              }
 
 
 
-/*////////Animate Scroll///////////*/
+              .slideDown.ng-hide-remove {
+                animation-name: show;
+                -webkit-animation-name: show;
 
-.not-visible {
-  visibility: hidden;
+                animation-duration: .5s;
+                -webkit-animation-duration: .5s;
+
+                animation-timing-function: ease-out;
+                -webkit-animation-timing-function: ease-out;
+              }
+/*//////////////End Show more////////////////*/
+
+        .btnCheckIn{
+            margin-left: 400px;
+            display: inline;
+        }
+
+
+/*////////Card Flip///////////*/
+
+flippy {
+  float: left;
+  -webkit-perspective: 600px;
+          perspective: 600px;
+  -ms-perspective: none;
+}
+flippy flippy-front,
+flippy flippy-back {
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+flippy flippy-front {
+  z-index: 900;
+  -webkit-transform: rotate3d(0, 0, 0, 0deg);
+          transform: rotate3d(0, 0, 0, 0deg);
+  -ms-transform: rotateY(0deg);
+}
+flippy flippy-back {
+  z-index: 800;
+  -webkit-transform: rotate3d(0, 1, 0, -180deg);
+          transform: rotate3d(0, 1, 0, -180deg);
+  -ms-transform: rotateY(180deg);
+}
+flippy.flipped flippy-front {
+  z-index: 900;
+  -webkit-transform: rotate3d(0, 1, 0, 180deg);
+          transform: rotate3d(0, 1, 0, 180deg);
+  -ms-transform: rotateY(180deg);
+}
+flippy.flipped flippy-back {
+  z-index: 1000;
+  -webkit-transform: rotate3d(0, 0, 0, 0deg);
+          transform: rotate3d(0, 0, 0, 0deg);
+  -ms-transform: rotateY(0deg);
 }
 
-        .slide-reveal.ng-enter {
-          -webkit-transition:0.5s linear all;
-          -moz-transition:0.5s linear all;
-          -o-transition:0.5s linear all;
-          transition:0.5s linear all;
-
-          opacity:0.5;
-          position:relative;
-          opacity:0;
-          top:10px;
-        }
-        .slide-reveal.ng-enter-active {
-          top:0;
-          opacity:1;
-        }
-
-        .expand.ng-enter {
-          -webkit-transition:0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) all;
-          -moz-transition:0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) all;
-          -o-transition:0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) all;
-          transition:0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) all;
-
-          opacity:0;
-          max-height:0;
-          overflow:hidden;
-        }
-        .expand.ng-enter-active {
-          opacity:1;
-          max-height:40px;
-        }
-
-        .expand.ng-leave {
-          -webkit-transition:0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) all;
-          -moz-transition:0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) all;
-          -o-transition:0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) all;
-          transition:0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) all;
-
-          opacity:1;
-          max-height:40px;
-          overflow:hidden;
-        }
-        .expand.ng-leave-active {
-          opacity:0;
-          max-height:0;
-        }
 
 
+flippy.fancy {
+  float: left;
+  margin: 0 10px 10px 0;
+  position: relative;
+  font-size: .8em;
+  cursor: pointer;
+  width: 250px;
+  height: 250px;
+}
+flippy.fancy img {
+  height: 100%;
+  width: 100%;
+}
+flippy.fancy flippy-front {
+  float: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 900;
+  width: inherit;
+  height: inherit;
+  border: 1px solid #ccc;
+  background: white;
+  text-align: center;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.9);
+}
+flippy.fancy flippy-front.flipped {
+  border-color: #eee;
+  /*background: #333;*/
+  box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
+}
+flippy.fancy flippy-back {
+  float: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 800;
+  width: inherit;
+  height: inherit;
+  border: 1px solid #ccc;
+  background: white;
+  text-align: center;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.9);
+}
+flippy.fancy flippy-back.flipped {
+  /*background: #80868d;*/
+  box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
+}
 
-
-
-
-        .dialogdemoBasicUsage #popupContainer {
-      position: relative; }
-
-    .dialogdemoBasicUsage .footer {
-      width: 100%;
-      text-align: center;
-      margin-left: 20px; }
-
-    .dialogdemoBasicUsage .footer, .dialogdemoBasicUsage .footer > code {
-      font-size: 0.8em;
-      margin-top: 50px; }
-
-    .dialogdemoBasicUsage button {
-      width: 200px; }
-
-    .dialogdemoBasicUsage div#status {
-      color: #c60008; }
-
-    .dialogdemoBasicUsage .dialog-demo-prerendered md-checkbox {
-      margin-bottom: 0; }
+/*////////////End Card Flip/////////////*/
